--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,45 @@
-aiohttp==3.8.0
-aiosignal==1.2.0
-amqp==5.0.6
-aniso8601==7.0.0
-anyio==3.3.4
+anyio==3.4.0
 asgiref==3.4.1
-async-timeout==4.0.1
-asyncio==3.4.3
-asynctest==0.13.0
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-backports.entry-points-selectable==1.1.0
-bcrypt==3.2.0
-billiard==3.6.4.0
-bleach==3.3.0
-cached-property==1.5.2
-celery==5.0.5
 certifi==2021.10.8
 cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.7
+charset-normalizer==2.0.9
 click==8.0.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.1.1
-decorator==5.1.0
-defusedxml==0.7.1
-distlib==0.3.3
-dj-rest-auth==2.1.4
-Django==3.1.6
-django-allauth==0.43.0
-django-ckeditor==6.0.0
-django-cors-headers==3.6.0
-django-debug-toolbar==3.2
-django-environ==0.4.5
-django-extensions==3.1.0
-django-filter==2.4.0
-django-js-asset==1.2.2
-django-money==2.1
-django-redis==4.12.1
-djangorestframework==3.12.2
-djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==4.4.0
+cryptography==36.0.0
+Django==3.2.10
+django-cors-headers==3.10.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==5.0.0
 dnspython==2.1.0
-drf-nested-routers==0.93.4
 drf-yasg==1.20.0
 email-validator==1.1.3
-Fabric3==1.14.post1
-fast-bitrix24==1.5.1
 fastapi==0.70.0
-filelock==3.1.0
-flake8==3.8.4
-frozenlist==1.2.0
-graphene==2.1.8
-graphql-core==2.3.2
-graphql-relay==2.0.1
-gunicorn==20.0.4
 h11==0.12.0
 idna==3.3
 importlib-metadata==4.8.2
 inflection==0.5.1
-ipython==7.19.0
 itypes==1.2.0
-jedi==0.18.0
 Jinja2==3.0.3
-joblib==1.1.0
-kombu==5.2.1
 MarkupSafe==2.0.1
-mccabe==0.6.1
-more-itertools==8.11.0
 motor==2.5.1
-multidict==5.2.0
-numpy==1.21.3
-oauthlib==3.1.1
-packaging==21.2
-paramiko==2.8.0
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==7.2.0
-platformdirs==2.4.0
-promise==2.3
-prompt-toolkit==3.0.22
-psycopg2-binary==2.8.6
-py-moneyed==1.2
-pycodestyle==2.6.0
+packaging==21.3
+psycopg2==2.7.7
 pycparser==2.21
 pydantic==1.8.2
-pyflakes==2.2.0
-Pygments==2.10.0
-PyJWT==1.7.1
-pymongo==3.12.1
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyTelegramBotAPI==4.2.0
-python-dateutil==2.8.1
+PyJWT==2.3.0
+pymongo==3.12.3
+pyparsing==3.0.6
 python-dotenv==0.19.2
-python3-openid==3.2.0
 pytz==2021.3
-redis==3.5.3
-requests==2.25.1
-requests-oauthlib==1.3.0
+requests==2.26.0
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
-Rx==1.6.1
-scikit-learn==1.0.1
-scipy==1.7.1
-six==1.16.0
-sklearn==0.0
 sniffio==1.2.0
 sqlparse==0.4.2
 starlette==0.16.0
-threadpoolctl==3.0.0
-tqdm==4.62.3
-traitlets==5.1.1
-typing-extensions==3.10.0.2
+typing_extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.26.7
-uvicorn==0.15.0
-vine==5.0.0
-virtualenv==20.8.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-yarl==1.7.2
+uvicorn==0.16.0
 zipp==3.6.0
