--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+anyio==3.4.0
+asgiref==3.4.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.9
+click==8.0.3
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.0
 Django==3.2.10
 django-cors-headers==3.10.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
+email-validator==1.1.3
 psycopg2==2.7.7
 PyJWT==2.3.0
 python-dotenv==0.19.2
-django-filter==21.1
+
